--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
@@ -16,7 +20,7 @@
   <body>
     <main class="card">
       <img
-        src="/assets/images/image-qr-code.png"
+        src="./assets/images/image-qr-code.png"
         class="card__image"
         alt="QR Code"
       />
