--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         alt="QR Code"
       />
       <h1 class="card__title">
-        Improve your front-end skill by building projects
+        Improve your front-end skills by building projects
       </h1>
       <p class="card__description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level.
+        the next level
       </p>
     </main>
   </body>
