--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
